--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,10 @@
 matplotlib==3.9
-numpy==2.0
-requests==2.18.4
-pandas==0.23.4
-polars
+seaborn==0.13.2
+hvplot==0.10.0
+numpy==1.26.4
+pandas==2.2
+pyarrow==16.1.0
+polars>=1.0.0.rc2
 ipywidgets==7.3.0
 metakernel
+jupyterlab_myst
