First version for getting started

--- a/python-school/_toc.yml
+++ b/python-school/_toc.yml
@@ -4,7 +4,7 @@ root: index
 parts:
   - caption: Getting Started
     chapters:
-      - file: installation
+      - glob: getting_started/*
   - caption: Functions
     chapters:
       - glob: functions/*
