First draft for polars basics

--- a/python-school/_toc.yml
+++ b/python-school/_toc.yml
@@ -7,4 +7,6 @@ parts:
       - glob: getting_started/*
   - caption: Functions
     chapters:
-      - glob: functions/*
+  - caption: Dataframes
+    chapters:
+      - glob: dataframes/*-sol*
