FIrst draft for function courses

--- a/python-school/_toc.yml
+++ b/python-school/_toc.yml
@@ -7,6 +7,7 @@ parts:
       - glob: getting_started/*
   - caption: Functions
     chapters:
+      - glob: functions/*-sol*
   - caption: Dataframes
     chapters:
       - glob: dataframes/*-sol*
