--- a/python-school/_toc.yml
+++ b/python-school/_toc.yml
@@ -8,6 +8,10 @@ parts:
   - caption: Functions
     chapters:
       - glob: functions/*-sol*
+  - caption: Nested data structures
+    chapters:
+      - glob: mixed-structures/*-sol*
+      - file: mixed-structures/3-chal.ipynb
   - caption: NumPy
     chapters:
       - glob: numpy/*-sol*
