--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -22,6 +22,13 @@ jobs:
     steps:
     - uses: actions/checkout@v3
 
+    # Install graphviz to draw Polars graphs.
+    - name: Install graphviz
+      uses: awalsh128/cache-apt-pkgs-action@latest
+      with:
+        packages: graphviz
+        version: 1.0
+
     # Install dependencies
     - name: Set up Python 3.11
       uses: actions/setup-python@v4
