don't be german

--- a/python-school/_toc.yml
+++ b/python-school/_toc.yml
@@ -2,7 +2,7 @@
 format: jb-book
 root: index
 parts:
-  - caption: Getting Started
+  - caption: Getting started
     chapters:
       - glob: getting_started/*
   - caption: Functions
