--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -50,7 +50,7 @@ jobs:
     - name: cache executed notebooks
       uses: actions/cache@v4
       with:
-        path: _build/.jupyter_cache
+        path: "python-school/_build/.jupyter_cache"
         key: jupyter-book-cache-${{ hashFiles('requirements.txt') }}
 
     # Build the book
