add snake noto emoji as favicon

--- a/python-school/_config.yml
+++ b/python-school/_config.yml
@@ -1,7 +1,6 @@
 # In _config.yml
 title: Py4DataSci
 author: Thomas Louf
-# logo: logo.png
 
 execute:
   execute_notebooks: cache
@@ -9,6 +8,7 @@ execute:
 only_build_toc_files: true
 
 html:
+  favicon: "_static/img/u1f40d.svg"
   use_repository_button: true
   home_page_in_navbar: false
   baseurl: "https://tlouf.github.io/Py4DataSci-course"
