--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -24,11 +24,12 @@ jobs:
 
     # Install graphviz to draw Polars graphs.
     - name: Install graphviz
-      uses: awalsh128/cache-apt-pkgs-action@latest
-      with:
-        packages: graphviz
-        version: 1.0
-        execute_install_scripts: true
+      run: sudo apt install graphviz
+      # uses: awalsh128/cache-apt-pkgs-action@latest
+      # with:
+      #   packages: graphviz
+      #   version: 1.0
+      #   execute_install_scripts: true
 
     - name: Graphviz config
       run: |
